--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,16 +2,18 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - "main"
+    tags:
+      - "*"
   schedule:
     - cron: '30 1 * * 1'
 
+env:
+  DOCKERHUB_IMAGE: docker.io/acoby/matrixorg-sydent
+
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -27,9 +29,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3.6.2
+        with:
+          images: ${{ env.DOCKERHUB_IMAGE }}
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: trickert76/matrixorg-sydent:latest
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }},${{ env.DOCKERHUB_IMAGE }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
